# SuperHub

./: .dockerignore  .env.example  .gitignore  Dockerfile  MAKE-A-MULTI-USER-CHAT.MD  MAKE-A-MULTIPLAYER-GAME.MD  README.md  docker-compose.yml  hub.config.json  hub.config.ts  package-lock.json  package.json  superhub-0.1.0.tgz  tsconfig.json
client/: README.md  node-ts.md  python.md  react.md
client/python-lib/: .gitignore  README.md  pyproject.toml
client/python-lib/examples/: .env.example  iss_provider.py  iss_updater.py
client/python-lib/superhub_client/: __init__.py  client.py  http.py  protocol.py
client/python-lib/superhub_client/examples/: __init__.py  http_api_demo.py  iss_provider.py  iss_updater.py  music_controller.py  music_provider.py
deploy/: Caddyfile
docs/: IMPLEMENTATION_STATUS.md  OPS_RUNBOOK.md  SDK_NPM_PUBLISH_GUIDE.md  WORKLOG_2026-03-01.md
examples/: .env.example  README.md  iss-monitor.ts  music-controller.ts  music-provider.ts
examples/python/: README.md  http_api_demo.py  hub_protocol.py  iss_provider.py  iss_updater.py  music_controller.py  music_provider.py  requirements.txt
scripts/: build-client-distributions.mjs  diagnostics.mjs
tests/: backpressure.test.mjs  contracts.test.mjs  hub.integration.test.mjs  network.test.mjs  state-store.test.mjs
tests/helpers/: hub-test-utils.mjs
