[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superhub-client"
version = "0.1.0"
description = "SuperHub Python client (LAN/local distribution)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "websockets>=12,<16"
]
optional-dependencies = { examples = ["sgp4>=2.24"] }
authors = [
  { name = "SuperHub" }
]

[project.scripts]
superhub-py-music-provider = "superhub_client.examples.music_provider:main"
superhub-py-music-controller = "superhub_client.examples.music_controller:main"
superhub-py-iss-provider = "superhub_client.examples.iss_provider:main"
superhub-py-iss-updater = "superhub_client.examples.iss_updater:main"
superhub-py-http-demo = "superhub_client.examples.http_api_demo:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["superhub_client*"]
